TextureMapperLayer: invisible layers do not let their children to be painted https://bugs.webkit.org/show_bug.cgi?id=88786

Reviewed by Noam Rosenthal.

Do not early discard recursively painting children layers if the
current layer is not visible.

Changes already covered by compositing tests. This fixes both
compositing/backface-visibility/backface-visibility-3d.html and
compositing/backface-visibility/backface-visibility-non3d.html.

* platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::computeTransformsRecursive):
(WebCore::TextureMapperLayer::paintSelf):
(WebCore::TextureMapperLayer::isVisible):

git-svn-id: svn://svn.chromium.org/blink/trunk@120577 bbb929c8-8fbe-4397-9dbb-9b2b20218538